<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:id="@+id/LL_Content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/banner_arriba"
            android:layout_width="wrap_content"
            android:layout_height="0sp"
            android:layout_weight="0.1"
            android:layout_gravity="center"
            android:layout_marginBottom="5sp"
            android:layout_marginTop="5sp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />
        <Button
            android:id="@+id/BT_Hide_Panel"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_margin="10sp"
            android:visibility="gone"
            android:text="OCULTAR"
            android:layout_alignParentRight="true"/>
        <LinearLayout
            android:id="@+id/direcciones"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingBottom="2sp"
            android:paddingTop="2sp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/linea_gris" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon_radio_ope"
                    android:layout_width="70sp"
                    android:layout_height="70sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5sp"
                    android:contentDescription="@string/app_name"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/text_orange"
                        android:gravity="center"
                        android:textSize="@dimen/fontdirmap"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/nombre_cliente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="@dimen/fontdirmap"
                        android:textStyle="bold" />
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0sp"
            android:layout_weight="0.62">
            <Button
                android:id="@+id/BT_Waze"
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:layout_margin="10sp"
                android:visibility="gone"
                android:background="@drawable/waze_button"
                />
            <fragment
                android:id="@+id/map"
                class="com.google.android.gms.maps.MapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:id="@+id/layout_pay"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"

                            android:text="Ingrese las unidades"

                            />

                        <EditText
                            android:id="@+id/totUnits"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Total unidades"
                            android:maxLength="4"
                            android:inputType="number"
                            />

                        <CheckBox
                            android:id="@+id/chkRecargo1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:text="Aeropuerto = COP 4100"
                            />

                        <CheckBox
                            android:id="@+id/chkRecargo2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:text="Nocturno, Dominical y Festivo = COP 2000"
                            />

                        <CheckBox
                            android:id="@+id/chkRecargo3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:text="Mensajeria  "
                            />

                        <!--<EditText-->
                        <!--android:id="@+id/totViaje"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:hint="Total viaje"-->
                        <!--/>-->

                        <TextView
                            android:id="@+id/totViaje"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="20dp"
                            android:text="Total: "

                            />


                    </LinearLayout>
                </ScrollView>
                <RelativeLayout
                    android:id="@+id/RL_Travel_Details"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:background="@android:color/white"
                    android:layout_height="120sp">

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_centerInParent="true"
                       android:layout_marginLeft="30sp"
                       android:orientation="vertical">
                       <TextView
                           android:id="@+id/TV_Destination"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:textColor="@color/text_orange"
                           android:textSize="20sp"
                           android:text="Destino"/>
                       <TextView
                           android:id="@+id/TV_Recargos"
                           android:text="Recargo Nocturno"
                           android:layout_width="match_parent"
                           android:textColor="@color/text_gray"
                           android:layout_height="wrap_content" />
                       <TextView
                           android:id="@+id/TV_Valor"
                           android:text="Total: "
                           android:textColor="@color/text_gray"
                           android:layout_width="match_parent"
                           android:textSize="20sp"
                           android:layout_height="wrap_content" />
                   </LinearLayout>

                </RelativeLayout>



                <LinearLayout
                    android:id="@+id/layout_code_authorization"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" >

                    <EditText
                        android:id="@+id/etCodeAuthorization"
                        android:layout_width="match_parent"
                        android:layout_height="60sp"
                        android:gravity="center"
                        android:text=""
                        android:layout_marginLeft="30sp"
                        android:layout_marginRight="30sp"
                        android:textColor="@color/text_orange"
                        android:textSize="20sp"
                        android:backgroundTint="@color/text_orange"
                        android:hint="@string/title_confirm_code"
                        android:inputType="number" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:padding="7sp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btn_pay"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight=".5"
                        android:background="@drawable/btn_green"
                        android:paddingBottom="2dp"
                        android:text="@string/aceptar"
                        android:textColor="@android:color/white"
                        android:visibility="gone" />
                    <Button
                        android:id="@+id/BT_Chat"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight=".5"
                        android:text="@string/chat"
                        android:background="@drawable/orange_border"
                        android:textColor="@color/text_orange"
                     />

                    <Button
                        android:id="@+id/btnLlegada"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight=".5"
                        android:background="@drawable/btn_green"
                        android:paddingBottom="2dp"
                        android:text="@string/map_button_ya_llegue"
                        android:textColor="@android:color/white"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/btnConfirmCode"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight=".5"
                        android:background="@drawable/btn_green"
                        android:paddingBottom="2dp"
                        android:text="@string/btn_confirm_code"
                        android:textColor="@android:color/white"
                        android:visibility="gone" />


                    <Button
                        android:id="@+id/btnCancelar"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight=".5"
                        android:background="@drawable/btn_request"
                        android:paddingBottom="2dp"
                        android:text="@string/map_button_cancelar"
                        android:textColor="@android:color/white"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/btnFinalizar"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight=".5"
                        android:background="@drawable/btn_request"
                        android:paddingBottom="2dp"
                        android:text="@string/map_button_finalizar"
                        android:textColor="@android:color/white"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btnPay"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight=".5"
                        android:background="@drawable/btn_green"
                        android:paddingBottom="2dp"
                        android:text="Confirmar pago y finalizar"
                        android:textColor="@android:color/white"
                        android:visibility="gone" />


                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_no_connectivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/disabled_transparent"
        android:clickable="true"
        android:visibility="gone">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_above="@+id/textView_no_connectivity"
            android:layout_centerHorizontal="true"
            android:background="@drawable/loader" />

        <ImageView
            android:id="@+id/loader_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_above="@+id/textView_no_connectivity"
            android:layout_centerHorizontal="true"
            android:background="@drawable/loader_sombra" />

        <TextView
            android:id="@+id/textView_no_connectivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/no_connectivity_text_margin"
            android:layout_marginEnd="@dimen/no_connectivity_text_margin"
            android:layout_marginLeft="@dimen/no_connectivity_text_margin"
            android:layout_marginRight="@dimen/no_connectivity_text_margin"
            android:gravity="center"
            android:text="@string/network_connectivity_message"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_large" />

    </RelativeLayout>

</RelativeLayout>
